--- a/src/app/player-search/player-search.component.html
+++ b/src/app/player-search/player-search.component.html
@@ -1,10 +1,54 @@
-<div id = 'search-component'>
-    <label for='search-box'>Player Search</label>
-    <input #inputText type="text" class="form-control mb-4" placeholder="Search" [(ngModel)]="query" id="listSearch">
-    <ul *ngIf='query' class='search-result'>
-        <li *ngFor='let player of players | searchFilter: query'>
-            <a [routerLink]="['/details', player.PlayerID]">{{player.FirstName}} {{player.LastName}} {{player.PlayerID}}</a>
-        </li>
-    </ul>
+<div class="container">
+  <h1 class="title">
+    NFL Player Data
+  </h1>
+  <pre class="instructions">
+    Search for your fantasy football player
+    to get their latest stats.
+  </pre>
+  <div class="auto-complete">
+    <!-- Search Input -->
+    <input #inputSearch class="input-search" type="text" placeholder="Search" [(ngModel)]="query">
+    <!-- Dropdown Menu -->
+    <div *ngIf='query' class='search-result drop-doown'>
+      <table>
+        <tr class="item" *ngFor='let player of players | searchFilter: query' (click)="onSelectPlayer(player); inputSearch.value=''">
+          <td>
+            <div class="avatar">
+              <img [src]="player.PhotoUrl" alt="avatar" width="65" height="90">
+            </div>
+          </td>
+          <td>{{ player.FirstName }} {{ player.LastName }}</td>
+          <td>{{ player.Team }}</td>
+        </tr>
+      </table>
+    </div>
+  </div>
+
+  <div *ngIf="playerSelected" class="playerInfo">
+    <div class='playerInfoRow'>
+      <img class='playerImg playerItem' [src]="player.PhotoUrl" alt="avatar" width="65" height="90">
+      <div>
+        <h3 class='playerName playerItem'>{{ player.name }}</h3>
+        <h3 class='playerTeam playerItem'>{{ player.team }}</h3>
+      </div>
+    </div>
+    <div class='playerInfoRow playerItem'>
+      <h4 class='playerPosition playerItem'>{{ player.position }}</h4>
+      <h4 class='playerNumber playerItem'>#{{ player.number }}</h4>
+      <h5><select class='typeDropdown playerItem' name="fantasyTypeDropdown" #fantasyTypeDropdown (change) = "changeType(fantasyTypeDropdown.value)">
+        <option value="regular">Regular</option>
+        <option value="yahoo">Yahoo</option>
+        <option value="draftkings">Draft Kings</option>
+        <option value="fanduel">Fan Duel</option>
+        <option value="ppr">PPR</option>
+    </select></h5>
+    </div>
+  </div>
+
+  <div *ngIf="playerSelected" >
+    <plot [playerID]="player.id" [type]="type"></plot>
+  </div>
+
 </div>
 
