--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background: url(./assets/light-blue-bg.jpeg) no-repeat center center fixed;
+}
