--- a/src/app/player-search/player-search.component.scss
+++ b/src/app/player-search/player-search.component.scss
@@ -11,6 +11,7 @@
 
 h1 {
     text-align: center;
+    margin-top: 0px;
 }
  
 .container .title {
@@ -19,7 +20,7 @@ h1 {
   text-align: center;
   position: relative;
   top: 10%;
-  margin-top: 2em;
+  margin-top: 1.5em;
   color: black;
   font-weight: bold;
 }
