--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
+    margin: 0;
     background: url(./assets/light-blue-bg.jpeg) no-repeat center center fixed;
+    background-size: cover;
 }
