--- a/src/app/player-search/player-search.component.html
+++ b/src/app/player-search/player-search.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1 class="title">
-    NFL Player Data
+    NFL Fantasy Football Scores
   </h1>
   <pre class="instructions">
     Search for your fantasy football player
